
v0.12.0, ********
- caching initially constructed splice graphs for reuse in downstream quants to avoid reconstruction effort.
- all splice graphs for all steps leverage the normalized read coverage (not just isoform ID)



v0.11.0, November 10, 2025
- LRAA wdls to scatter over the chromosome/strand combo
- improved multithreading within contigs
- more logging and progress monitoring for long running parts
- using Leiden alg for isoform-to-gene clustering and adjustments for large clusters to avoid runtime performance issues
- added --verbose to force direct logging to the terminal. When running in default parallel contig mode, all logging info is written to the corresponding chr/strand err log


    
v0.10.0 November 2, 2025
- Defaults now tuned for non-HiFi long reads (e.g., ONT). Replaced --LowFi flag with --HiFi to enable more stringent PacBio HiFi parameters.
- HiFi mode sets: min_per_id=98, infer_TSS/PolyA enabled, max_exon_spur_length=13, no splice-boundary aggregation, and fractures splice graph at input transcript bounds.
- runs --CPU parallel contig/strand combinations. If --no_parallelize_contigs, then allows up to --CPU per cluster of reads in per contig/strand evals.
- can resume from earlier partially completed runs.  Disable with  --no_resume_parallel
- uses SQLITE (or lmdb) where needed to reduce RAM usage.  See --store_backend
- new --bam_list option intended for quant-only runs with single cell cluster data, each bam corresponding to the cell cluster partitioned bam. Used in single cell pipeline (WDL).


v0.9.0 Sept 26, 2025
- trimming transcript UTRs to min/max of contained evidence transcripts and only adjust UTRs to min/max of contained isoforms if the corresponding polyA or TSS annotation flags arent set


v0.8.0
- ME and SE distinct phases followed by integration
- classify known isoforms by splice pattern hash (introns) matching input reference set; ME/SE or mono-exonic isoforms always treated as novel for min_reads_novel_isoform filtering