@@ -2,6 +2,8 @@
 v0.12.0, ********
 - caching initially constructed splice graphs for reuse in downstream quants to avoid reconstruction effort.
 - all splice graphs for all steps leverage the normalized read coverage (not just isoform ID)
+- added --num_parallel_contigs to control contig-level concurrency (default 4 workers); --num_threads_per_worker (legacy --CPU alias) specifies cores allocated per contig/strand worker (default 1 core)
+- default --oversimplify now targets mitochondrial contigs ("chrM,M")
 
 
 
